# Ghe2d-old

./: .gitignore  .gitmodules  Cargo.toml  README.md  bindings.json  build.bat  build.sh  deno.json  deno_bindgen_install.sh  mod.ts  run.bat  test.bat  test.sh
ArabicString/: ArabicString.cpp
lib/: color.ts  ffi.ts  types.ts  utilty.ts
lib/shapes/: circle.ts  line.ts  rect.ts  text.ts  triangle.ts
native/: CMakeLists.txt
native/include/: arabic-text.hpp  blend-context.hpp  blend-image.hpp  blend-styling.hpp  blend-text.hpp  blend-transformations.hpp
native/src/: arabic-text.cpp  blend-context.cpp  blend-image.cpp  blend-path.cpp  blend-styling.cpp  blend-text.cpp  blend-transformations.cpp
src/: ffi.ts  g_image.rs  lib.rs  shapes.rs  test.rs
src/shapes/: circle.rs  line.rs  rect.rs  text.rs  triangle.rs
test/: test.ts
