[package]
name = "Ghe2d"
version = "0.1.0"
edition = "2021"

[lib]
name = "ghe2d"
crate-type = ["cdylib"]

[dependencies]
ar-reshaper = "1.0.0"
deno_bindgen = "0.8.1"
image = "0.24.7"
imageproc = "0.23.0"
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"]}
rusttype = "0.9.3"
num-integer = "0.1.45"
serde = { version = "1.0.188", features = ["derive"] }
raqote = "0.8.3"
font-kit = "0.11.0"
tokio = { version = "1.32.0", features = ["full"] }
